# ML-SCAM-SWE

./: .gitignore  CCC_loss.html  DISCO_NNorm_GAM2.html  DiscoEncodeProcessDecode.html  DiscoMlpTransformer.html  EncodeProcessDecode.html  FOV_and_basis_funcs.html  HierarchicalDiscoEPD.html  MlpTransformer.html  NNorm_GAM2.html  SphericalTransformerV2.html  TH_SWE.html  benchmark_swe_solver.html  build_docs.py  compute_db_stats.html  conservation_loss.html  generate_training_db.html  index.html  laplacian_loss.html  model_registry.html  nnorm_gam2_adapter.html  normalization_utils.html  pde_dataset_extended.html  precomputed_dataset.html  pyproject.toml  search.js  spectral_loss.html  test_laplacian_loss.html  test_precomputed_dataset.html  verify_disco_transformer.html  wandb_plots.html
.github/workflows/: docs.yml
swe/: CCC_loss.py  DISCO_NNorm_GAM2.py  DiscoEncodeProcessDecode.py  DiscoMlpTransformer.py  EncodeProcessDecode.py  FOV_and_basis_funcs.py  HierarchicalDiscoEPD.py  MlpTransformer.py  NNorm_GAM2.py  SphericalTransformerV2.py  TH_SWE.py  benchmark_swe_solver.py  compute_db_stats.py  conservation_loss.py  create_swe_gif.py  filtered_rollout.py  generate_training_db.py  ic_noise_sandbox.py  laplacian_loss.py  model_registry.py  nnorm_gam2_adapter.py  normalization_utils.py  pde_dataset_extended.py  plot_swe_results.py  precomputed_dataset.py  run_solver_from_nc.py  spectral_loss.py  test_laplacian_loss.py  test_precomputed_dataset.py  verify_disco_transformer.py  wandb_plots.py
